2010-10-07  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: easymenu (message-edit, popup, process-list)

2010-10-06  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: fsvn-command-error promote to error-condition

	* Change: fsvn-file-name-as-repository -> fsvn-directory-name-as-repository

2010-10-03  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Change: fsvn-popup-copy-process-sentinel -> fsvn-popup-copy/move-process-sentinel

	* Add: fsvn-log-list-ediff-local bound to `= l' in log-list-mode

	* Add: fsvn-browse-ediff-path bound to `= E' in browse-mode

	* Change: fsvn-log-list-ediff-with-wc -> fsvn-log-list-ediff-with-base

	* Improvement: Enable can ediff directory in log-list-mode (But is not well designed)

	* Improvement: enable save directory in log-list-mode

2010-10-02  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Improvement: complete url and complete argument.

	* Add: Show CopyFrom path in log-sibling-mode.

	* Add: fsvn-log-list-propview-this bound to `z p'

	* Add: fsvn-log-sibling-propview-this bound to `z p'

	* Fix: completing-read-url

	* Change: fsvn-open-log-view-mode -> fsvn-open-logview-mode

2010-09-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: Multiple Emacs process cleanup using files in temp directory.

2010-09-18  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Release: 0.9.6

	* Add: fsvn-browse-create-patch-path bound to `= P'
	       fsvn-browse-create-patch-selected bound to `= p'

2010-09-15  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fancy modeline (from psvn.el)

2010-08-31  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Add: fsvn-open-repository

2010-08-23  Hayashi Masahiro (林 雅博)  <mhayashi1120@gmail.com>

	* Fix: completing read command argument quoted string.

	* Add: easymenu (proplist, propedit)

	* Add: fsvn-log-list-revert-to-revision key is bound to `C-c C-t'

	* Add: fsvn-log-list-create-patch-generic key is bound to `= p'
